--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@fortawesome/free-brands-svg-icons": "^6.7.1",
     "@fortawesome/free-solid-svg-icons": "^6.7.1",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@mdi/font": "^7.4.47",
     "animate.css": "^4.1.1",
     "core-js": "^3.8.3",
+    "highlight.js": "^11.10.0",
+    "showdown": "^2.1.0",
     "vue": "^3.2.13",
     "vue3-particles": "^2.12.0"
   },
