--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "deploy": "NODE_ENV=production vue-cli-service build && gh-pages -d dist"
+    "deploy": "npm run build && cp -r dist/* ."
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
