--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "animate.css": "^4.1.1",
     "core-js": "^3.8.3",
     "highlight.js": "^11.10.0",
+    "marked": "^15.0.3",
     "showdown": "^2.1.0",
     "vue": "^3.2.13",
+    "vue-markdown-render": "^2.2.1",
     "vue3-particles": "^2.12.0"
   },
   "devDependencies": {
